# telegramBot_sheduler

./: .env  .gitignore  README.md  bot.py  celerybeat-schedule  celerybeat-schedule.db  config.py  createdb.sql  db.py  exeptions.py  main.py  manage.py  pyproject.toml  requirements.txt  sheduler.py  tasks.db  tasks.py  worker.py
celery_queue/: tasks.py
coolsite/: asgi.py  settings.py  urls.py  wsgi.py
src/: bot.py  config.py  createdb.sql  db.py  exeptions.py  main.py  middlewares.py  sheduler.py  tasks.py
women/: urls.py  views.py
